# OfficeManagementBack

./: .env.dev  .env.prod  .env.prod.db  .gitattributes  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
src/: routers.py
src/base/: classes.py  permissions.py  serializers.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20201229_2221.py  0003_auto_20201229_2236.py  0004_auto_20201229_2239.py  0005_auto_20201229_2307.py  0006_salary.py  0007_auto_20210612_2307.py  0008_auto_20210614_0309.py
src/projects/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py  0002_auto_20210612_2307.py  0003_auto_20210614_0307.py  0004_auto_20210622_2333.py
src/reagents_devices/: admin.py  apps.py  models.py
src/reagents_devices/migrations/: 0001_initial.py  0002_device.py  0003_auto_20210217_2042.py
